# openphotos

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  build_static_web.sh  compose.yaml  download_models.sh  start.sh
.github/workflows/: docker-release.yml
android-java/: KNOWN_LIMITATIONS.md  README.md  USER_NOTES.md  build.gradle  settings.gradle
android-java/app/: build.gradle  proguard-rules.pro
docker/: entrypoint.sh  openphotos.env.amd64  openphotos.env.arm64  openphotos.env.example
face-normalizer/: Cargo.toml
face-normalizer/src/: clustering.rs  face_clustering_main.rs  face_detection.rs  face_normalization.rs  face_recognition.rs  lib.rs  main.rs  types.rs  utils.rs  yolo_detection.rs
ios-swift/OpenPhotos/: Album.swift  AlbumService.swift  AlbumTreeView.swift  AppDelegate.swift  AppDev-Info.plist  ContentView.swift  DatabaseManager.swift  FullScreenPhotoView.swift  GalleryView.swift  GalleryViewModel.swift  OpenPhotosApp.swift  PhotoGridView.swift  PhotoService.swift  PhotosTimelineView.swift  RemotePhotoViewer.swift  RemoteThumbnailView.swift  SECURITY_E2EE.md  SHARING_IMPLEMENTATION_COMPLETE.md  ServerAlbumManagerView.swift  ServerAlbumTreeView.swift  ServerFiltersSheet.swift  ServerFullScreenViewer.swift  ServerGalleryView.swift  ServerGalleryViewModel.swift  ServerModels.swift  ServerTimelineView.swift  SubscriptionView.swift  TimeRangeDialog.swift  VideoPlayerView.swift
ios-swift/OpenPhotos/Models/: DebugModels.swift  Share.swift  ShareCache.swift  TeamModels.swift  UploadModels.swift
ios-swift/OpenPhotos/Services/: AppLinks.swift  AppLog.swift  AppSettings.swift  AuthManager.swift  AuthorizedHTTPClient.swift  BackgroundTaskManager.swift  Base58.swift  CapabilitiesService.swift  Clipboard.swift  CloudBackupCheckService.swift  DiskImageCache.swift  HapticsManager.swift  HybridUploadManager.swift  IdleTimerManager.swift  KeychainHelper.swift  LocalNetworkPermissionRequester.swift  MediaAudioSession.swift  PhotoSaveHelper.swift  ServerPhotosService.swift  ServerUpdateService.swift  ShareE2EEManager.swift  SharePhotoDecryptor.swift  ShareService.swift  SyncRepository.swift  SyncService.swift  TUSClient.swift  TeamService.swift  ToastManager.swift
ios-swift/OpenPhotos/Transferables/: SharedAsset.swift
ios-swift/OpenPhotos/Utils/: DebugFlags.swift  Notifications.swift
ios-swift/OpenPhotos/ViewModels/: CreateShareViewModel.swift  ManageFacesViewModel.swift  NewShareViewModel.swift  ShareViewerViewModel.swift  SharingViewModel.swift  SimilarMediaViewModel.swift  TeamManagementViewModel.swift
ios-swift/OpenPhotos/Views/: ActiveFilterRow.swift  BackgroundTasksView.swift  ChangePasswordView.swift  E2EEUnlockUI.swift  LoginView.swift  ManageFacesView.swift  NetworkSettingsView.swift  ScrollOffsetPreference.swift  ScrollViewOffsetSpy.swift  SecuritySettings.swift  SelectedAlbumsPlaceholder.swift  ServerAddressEditor.swift  ShareSheet.swift  SimilarMediaView.swift  SlideshowView.swift  SyncAlbumsView.swift  SyncStatusView.swift  ToastBanner.swift  UploadsView.swift
ios-swift/OpenPhotosSwift.xcodeproj/: project.pbxproj
rustus/: Cargo.toml
rustus/src/: errors.rs
scripts/: build_android_installer.sh  install_linux.sh
src/: ai_config.rs  ee.rs  face_processing.rs  lib.rs  main.rs  media_tools.rs  scene_classifier.rs  yolo_detection.rs  yolo_detector_main.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  oauth.rs  types.rs
src/clip/: mod.rs  textual.rs  visual.rs
src/database/: embeddings.rs  meta_store.rs  mod.rs  multi_tenant.rs  pg_meta_store.rs  postgres.rs
src/face/: clustering.rs  detection.rs  mod.rs  normalization.rs  recognition.rs  types.rs
src/photos/: asset_id.rs  backup_id.rs  exif_write.rs  geocode.rs  metadata.rs  mod.rs  phash.rs  service.rs  service_old.rs  similar.rs
src/server/: auth_handlers.rs  capabilities.rs  crypto_envelope.rs  demo_policy.rs  face_handlers.rs  handlers.rs  logging.rs  mod.rs  photo_handlers.rs  photo_routes.rs  routes.rs  similar_routes.rs  state.rs  text_search.rs  tus_proxy.rs  updates.rs  upload_handlers.rs  upload_hooks.rs
src/video/: mod.rs
web-photos/: .env.local  README.md  m.tgz  middleware.ts  next.config.js  out.tgz  package-lock.json  package.json  tailwind.config.js
web-photos/app/: globals.css  layout.tsx  page.client.tsx  page.tsx  providers.tsx
web-photos/app/auth/: page.tsx
web-photos/app/public/: page.tsx
web-photos/app/settings/: page.tsx
web-photos/app/shared/: page.tsx
web-photos/app/sharing/: page.tsx
web-photos/components/: ActiveFilterChips.tsx  AlbumChips.tsx  MediaTypeSegment.tsx  SearchTypeahead.tsx
web-photos/components/albums/: AlbumBar.tsx  AlbumPickerDialog.tsx
web-photos/components/auth/: LoginForm.tsx  RegisterForm.tsx
web-photos/components/faces/: AddPersonOverlay.tsx  EditFaceDialog.tsx  UpdateFaceOverlay.tsx
web-photos/hooks/: use-toast.tsx  useFacesThumbVersion.ts  useQueryState.ts
web-photos/lib/: api.md  capture.ts  demo.ts  e2eeClient.ts  heic.ts  idb.ts  livePhoto.ts  logger.ts  publicE2EE.ts  remember.ts  shareE2EE.ts  umkDecrypt.ts  wrapPipeline.ts
web-photos/lib/api/: auth.ts  (+6 more)
web-photos/patches/: @uppy+tus+4.3.2.patch
web-photos/types/: argon2-bundled.d.ts  ee.d.ts
web-photos/workers/: e2ee.worker.ts
(+300 files in other folders)
